namespaced foo
